--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,5 +1,7 @@
-<HTML>
-<TITLE>Index</TITLE>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
 <style>
 	#divid{
 		font-size: 60px;
@@ -7,7 +9,8 @@
 		text-align: center;
 	}
 </style>
-<BODY>
+</head>
+<body>
 <div id="divid">Welcome to Kitten Webserver</div>
-</BODY>
-</HTML>
+</body>
+</html>
