--- a/webpage/index.html
+++ b/webpage/index.html
@@ -11,6 +11,6 @@
 </style>
 </head>
 <body>
-<div id="divid">Welcome to Kitten Webserver</div>
+<div id="divid">Welcome to Kitten Tiny HttpServer</div>
 </body>
 </html>
